@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-06-20  Piotr Ożarowski
+	* Filmweb, WP and FDb movie plugins updated
+
 2007-06-20  Michael Jahn
 	* fixed bug #11103: windows are not "on top"
 	* fixed bug #11088: Clone doesn't produce a new entry
